lab1/Test/L1-A-7-78.output
Error Type A at Line 6
Error Type A at Line 37
Error Type A at Line 38
